syntax = "proto3";

package RPCProto;

option go_package = "github.com/bytelang/kplayer/types/server";

import "gogoproto/gogo.proto";

// res
message Resource {
	string path = 1 [(gogoproto.moretags) = "validate:\"required\""];
	string unique = 2 [(gogoproto.moretags) = "validate:\"required\""];
	uint64 create_time = 3;
	uint64 start_time = 4;
	uint64 end_time = 5;
}

// add
message ResourceAddArgs {
	string path = 1 [(gogoproto.moretags) = "validate:\"required\""];
	string unique = 2 [(gogoproto.moretags) = "validate:\"required\""];
}
message ResourceAddReply {
	Resource resource = 1 [(gogoproto.nullable) = false];
}

// remove
message ResourceRemoveArgs {
	string unique = 1 [(gogoproto.moretags) = "validate:\"required\""];
}
message ResourceRemoveReply {
	message Resource {
		string path = 1 [(gogoproto.moretags) = "validate:\"required\""];
		string unique = 2 [(gogoproto.moretags) = "validate:\"required\""];
		uint64 create_time = 3;
	}
	Resource resource = 1;
}

// list
message ResourceListArgs {
}
message ResourceListReply {
	repeated Resource resources = 1 [(gogoproto.nullable) = false];
}

// all list
message ResourceAllListArgs {
}
message ResourceAllListReply {
	repeated Resource resources = 1 [(gogoproto.nullable) = false];
}

// get current resource
message ResourceCurrentArgs {
}
message ResourceCurrentReply {
	Resource resource = 1 [(gogoproto.nullable) = false];
}
